<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_default" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:background="@drawable/actionbar_bg" android:layout_width="fill_parent" android:layout_height="48.0dip"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageButton android:id="@id/actionbar_logo_btn" android:layout_width="180.0dip" android:layout_height="40.0dip" style="@style/ActionBarLogo" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="14.0dip" android:layout_height="26.0dip" android:text="@string/faq_1" style="@style/WidgetIndexHeader" />
            <TextView android:textSize="14.0dip" android:text="@string/faq_1_text" style="@style/HelpIndexItem" />
            <TextView android:textSize="14.0dip" android:layout_height="26.0dip" android:text="@string/faq_2" style="@style/WidgetIndexHeader" />
            <TextView android:textSize="14.0dip" android:text="@string/faq_2_text" style="@style/HelpIndexItem" />
            <TextView android:textSize="14.0dip" android:layout_height="26.0dip" android:text="@string/faq_3" style="@style/WidgetIndexHeader" />
            <TextView android:textSize="14.0dip" android:text="@string/faq_3_text" style="@style/HelpIndexItem" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
